# Conway-s-Life-Game

./: .gitignore  CMakeLists.txt  Makefile  README.md  random.json
Testing/: TAG
Testing/20240418-0417/: Test.xml
positions/: random.json  randomPos.py
src/: gui.hpp  logic.hpp  main.cpp  position.hpp
tests/computing/: CMakeLists.txt  computing.cpp  rightSequence.txt
